; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nfnetlink_log.c_nfulnl_set_flags.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/extr_nfnetlink_log.c_nfulnl_set_flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfulnl_instance = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfulnl_instance*, i32)* @nfulnl_set_flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfulnl_set_flags(%struct.nfulnl_instance* %0, i32 %1) #0 {
  %3 = alloca %struct.nfulnl_instance*, align 8
  %4 = alloca i32, align 4
  store %struct.nfulnl_instance* %0, %struct.nfulnl_instance** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nfulnl_instance*, %struct.nfulnl_instance** %3, align 8
  %6 = getelementptr inbounds %struct.nfulnl_instance, %struct.nfulnl_instance* %5, i32 0, i32 0
  %7 = call i32 @spin_lock_bh(i32* %6)
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.nfulnl_instance*, %struct.nfulnl_instance** %3, align 8
  %10 = getelementptr inbounds %struct.nfulnl_instance, %struct.nfulnl_instance* %9, i32 0, i32 1
  store i32 %8, i32* %10, align 4
  %11 = load %struct.nfulnl_instance*, %struct.nfulnl_instance** %3, align 8
  %12 = getelementptr inbounds %struct.nfulnl_instance, %struct.nfulnl_instance* %11, i32 0, i32 0
  %13 = call i32 @spin_unlock_bh(i32* %12)
  ret i32 0
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
